# turning-polars-dataframes-into-pretty-pictures-and-great-tables

./: .gitignore  01-introducing-polars-expressions.ipynb  02-preparing-the-data.ipynb  03-visualizing-the-data.ipynb  04-speedup-geo.ipynb  README.md  pyproject.toml  requirements.txt
data/biketrips/: biketrips-2024-03-01.parquet  biketrips-2024-03-02.parquet  biketrips-2024-03-03.parquet  biketrips-2024-03-04.parquet  biketrips-2024-03-05.parquet  biketrips-2024-03-06.parquet  biketrips-2024-03-07.parquet  biketrips-2024-03-08.parquet  biketrips-2024-03-09.parquet  biketrips-2024-03-10.parquet  biketrips-2024-03-11.parquet  biketrips-2024-03-16.parquet  biketrips-2024-03-17.parquet  biketrips-2024-03-18.parquet  biketrips-2024-03-19.parquet  biketrips-2024-03-20.parquet  biketrips-2024-03-21.parquet  biketrips-2024-03-22.parquet  biketrips-2024-03-23.parquet  biketrips-2024-03-24.parquet  biketrips-2024-03-25.parquet  biketrips-2024-03-26.parquet  biketrips-2024-03-27.parquet  biketrips-2024-03-28.parquet  biketrips-2024-03-29.parquet  biketrips-2024-03-30.parquet  biketrips-2024-03-31.parquet
